.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``PHAB_ID=#`` and ``RB_ID=#`` correspond to associated messages in commits.

Unreleased

18.3.0  2018-03-05

Runtime Behavior Changes:

  * util-app: Ensure that any flag parsing error reason is written to `System.err`
    before attempting to print flag usage. In the event that collecting flags for
    the printing the usage message fails, users will still receive a useful message
    as to why flag parsing failed. ``PHAB_ID=D137629``

  * util-core: Promises/Futures now use LIFO execution order for their callbacks
    (was depth-based algorithm before).  ``PHAB_ID=D135407``

  * util-core: Wrap the function passed to `Closable.make` in a try/catch and return
    a `Future.exception` over any NonFatal exception. ``PHAB_ID=D142086``

Deprecations:

  * util-core: RichU64* APIs are deprecated. Use Java 8 Unsigned Long API instead:
    ``PHAB_ID=D137893``

    - `new RichU64String("123").toU64Long` -> `Long.parseUnsignedInt`
    - `new RichU64Long(123L).toU64HexString` -> `Long.toHexString` (no leading zeros)

18.2.0  2018-02-05

New Features:

  * util-core: Added implicit conversion for percentage specified as "x.percent"
    to a fractional Double in `c.t.conversions.percent`. ``PHAB_ID=D128792``

  * util-tunable: Add deserializer for `c.t.u.StorageUnit` to JsonTunableMapper
    ``PHAB_ID=D132368``

Runtime Behavior Changes:

  * util-app: When `c.t.a.App.exitOnError` is called, it now gives `close`
    an opportunity to clean up resources before exiting with an error.
    ``PHAB_ID=D129437``

18.1.0  2018-01-17

New Features:

  * util-security: Added `c.t.util.security.X509CrlFile` for reading
    Certificate Revocation List PEM formatted `X509CRL` files.
    ``PHAB_ID=D127700``

17.12.0  2017-12-08

API Changes:

  * util-collection: `c.t.util.SetMaker` has been removed.